--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-leap-day
-title: Selamat Datang
-description: Belajar Bersama
+title: Ana Nurdiana
+description: Catatan sebagai pengingat
 
 ---
 permalink: /404.md
