--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,8 @@ header_pages:
   - portfolio.md
 
 github:
+  zip_url: http://example.com/download.zip
+  another_url: Ana Nurdiana
   is_project_page: false
 
 ---
