--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-leap-day
-title: Ana Nurdiana
+title: [Ana Nurdiana](/)
 description: Catatan sebagai pengingat
 
 header_pages:
