--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,9 @@ theme: jekyll-theme-leap-day
 title: Ana Nurdiana
 description: Catatan sebagai pengingat
 
+github:
+  is_project_page: true
+
 ---
 permalink: /404.md
 ---
