--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -1,4 +1,3 @@
-theme: jekyll-theme-leap-day
 title: Ana Nurdiana
 name: Ana Nurdiana
 description: Catatan sebagai pengingat
@@ -6,4 +5,4 @@ description: Catatan sebagai pengingat
 github:
   is_project_page: true
 
-permalink: /404.md
+permalink: /blog/404.md
